--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # configdatasource  (配置数据源4个参数  url  username password driver)
-spring.datasource.url = jdbc:mysql://localhost:3306/big_flight
+spring.datasource.url = jdbc:mysql://localhost:3306/big_flight?serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = 123456
 # new jdbc driver class
@@ -8,3 +8,8 @@ spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 # 配置应用的名称和端口号
 server.servlet.context-path=/crm
 server.port=8080
+
+#配置MyBatis
+mybatis.config-location = classpath:mybatis-config.xml
+mybatis.mapper-locations = /mapperConfig/**/**.xml
+mybatis.type-aliases-package = com.uek.project.crm.entity
