[增加] 分页插件

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,32 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.58</version>
+		</dependency>
+		
+		
+			<!-- MyBatis PageHelper 分页插件 -->
+	<!-- 	<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>5.1.10</version>
+		</dependency>
+		 -->
+		 
+		 <dependency>
+		 	<groupId>com.github.pagehelper</groupId>
+		 	<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>1.2.12</version>
+		 </dependency>
+		 <!-- 引人redis缓存 -->
+		 <dependency>
+		 	<groupId>org.springframework.boot</groupId>
+		 	<artifactId>spring-boot-starter-data-redis</artifactId>
+		 </dependency>
+		 
 	</dependencies>
 
 	<build>
