--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,27 @@ server.port=8080
 mybatis.config-location = classpath:mybatis-config.xml
 mybatis.mapper-locations = /mapperConfig/**/**.xml
 mybatis.type-aliases-package = com.uek.project.crm.entity
+
+#配置MyBatis PageHelper插件
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+
+# 配置文件上传
+# 是否支持批量上传   (默认值 true)
+spring.servlet.multipart.enabled=true
+# 上传文件的临时目录 （linux的默认临时目录定时会被删除会导致上传失败，尽量指定临时目录）
+spring.servlet.multipart.location=F:/upload
+# 上传文件最大为 1M （默认值 1M 根据自身业务自行控制即可）
+spring.servlet.multipart.max-file-size=100MB
+# 设置总上传的数据大小 10M（默认值10M 根据自身业务自行控制即可）
+spring.servlet.multipart.max-request-size=10000MB
+# 文件大小阈值，当大于这个阈值时将写入到磁盘，否则存在内存中，（默认值0 一般情况下不用特意修改）
+spring.servlet.multipart.file-size-threshold=0
+
+#Redis
+#配置安装Redis服务器的IP地址
+spring.redis.host=127.0.0.1
+#配置服务器的监听端口号
+spring.redis.port=6379
+#连接服务器的超时相应设置
+spring.redis.timeout=2000
